--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "author": "allan braun",
   "license": "MIT",
   "scripts": {
-    "watch": "tsc --watch",
-    "build": "tsc",
-    "serve": "live-server --port=8080 --entry-file=./index.html",
-    "serve-watch": "live-server --port=8080 --entry-file=./index.html & tsc --watch"
+    "build-dev": "webpack --mode development",
+    "prod": "webpack --mode production",
+    "hot": "webpack serve --hot --mode development"
   },
   "dependencies": {
-    "live-server": "^1.2.1",
-    "tslint": "^6.1.3",
+    "@types/micromodal": "^0.3.2",
+    "micromodal": "^0.4.6",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "ts-loader": "^9.1.1",
+    "tslint": "^6.1.3",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
