--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "hot": "webpack serve --hot --mode development"
   },
   "dependencies": {
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/micromodal": "^0.3.2",
+    "lodash.clonedeep": "^4.5.0",
     "micromodal": "^0.4.6",
     "typescript": "^4.2.4"
   },
